[gd_scene load_steps=6 format=3 uid="uid://djl2bvoktubb4"]

[ext_resource type="Script" path="res://scripts/speech_bubble.gd" id="1_wcywj"]
[ext_resource type="Texture2D" uid="uid://b5iph37oxd2cn" path="res://textures/speechbubbles/Bubbles right/Bubl #@!!.png" id="2_nb8nd"]
[ext_resource type="Script" path="res://scripts/flash.gd" id="3_3nqh6"]
[ext_resource type="Texture2D" uid="uid://blv7bgpmy1ne8" path="res://textures/speechbubbles/Bubbles left/Bubl #@!!(left).png" id="3_6g5n4"]
[ext_resource type="Texture2D" uid="uid://denjgh2io638p" path="res://textures/buttons/TutoriaDl.png" id="4_tkbqe"]

[node name="speech_bubble" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcywj")

[node name="pivot_scale" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="pivot_rotation" type="Control" parent="pivot_scale"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="texture_right" type="TextureRect" parent="pivot_scale/pivot_rotation"]
layout_mode = 0
offset_left = -47.0
offset_top = -280.0
offset_right = 446.0
offset_bottom = 55.0
texture = ExtResource("2_nb8nd")

[node name="texture_left" type="TextureRect" parent="pivot_scale/pivot_rotation"]
layout_mode = 0
offset_left = -19.0
offset_top = -287.0
offset_right = 474.0
offset_bottom = 48.0
texture = ExtResource("3_6g5n4")
flip_h = true

[node name="button_right" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = -32.0
offset_right = 291.0
offset_bottom = 67.0
texture = ExtResource("4_tkbqe")
script = ExtResource("3_3nqh6")

[node name="button_left" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -307.0
offset_top = -34.0
offset_right = -31.0
offset_bottom = 65.0
texture = ExtResource("4_tkbqe")
script = ExtResource("3_3nqh6")
